--- a/packages/canopee-css/src/prospect-client/Heading/HeadingLF.css
+++ b/packages/canopee-css/src/prospect-client/Heading/HeadingLF.css
@@ -2,7 +2,6 @@
 
 .af-heading {
   --heading-grid-column: 1;
-  --heading-column-gap: calc(8 / var(--font-size-base) * 1rem);
   --heading-title-color: var(--color-gray-900);
   --heading-subtitle-color: var(--color-gray-900);
   --heading-subtitle-font-size: calc(16 / var(--font-size-base) * 1rem);
@@ -37,10 +36,6 @@
 
   @media (--desktop-small) {
     --heading-subtitle-font-size: calc(18 / var(--font-size-base) * 1rem);
-
-    &:has(h2) {
-      --heading-column-gap: calc(12 / var(--font-size-base) * 1rem);
-    }
 
     h1 {
       --heading-title-font-size: calc(32 / var(--font-size-base) * 1rem);
